[gd_scene load_steps=17 format=3 uid="uid://ddf7k1a6v3i2a"]

[ext_resource type="Script" path="res://Scripts/playerG.gd" id="1_rua6a"]
[ext_resource type="Texture2D" uid="uid://cpo30w2toi4qa" path="res://Assets/Player/Knight.png" id="2_f33sm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7jn2"]
size = Vector2(8, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m52uf"]
size = Vector2(48, 20)

[sub_resource type="LabelSettings" id="LabelSettings_hffn7"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_m6qry"]
font_size = 36

[sub_resource type="AtlasTexture" id="AtlasTexture_mbau7"]
atlas = ExtResource("2_f33sm")
region = Rect2(384, 16, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_noq7h"]
atlas = ExtResource("2_f33sm")
region = Rect2(448, 16, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vou8"]
atlas = ExtResource("2_f33sm")
region = Rect2(512, 16, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkxns"]
atlas = ExtResource("2_f33sm")
region = Rect2(576, 16, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3byx"]
atlas = ExtResource("2_f33sm")
region = Rect2(640, 16, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_muk1r"]
atlas = ExtResource("2_f33sm")
region = Rect2(0, 16, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sppj3"]
atlas = ExtResource("2_f33sm")
region = Rect2(64, 16, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_at86q"]
atlas = ExtResource("2_f33sm")
region = Rect2(128, 16, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8h61"]
atlas = ExtResource("2_f33sm")
region = Rect2(192, 16, 64, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_bawvl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbau7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noq7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vou8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkxns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3byx")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_muk1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sppj3")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_at86q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8h61")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_rua6a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_f7jn2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_m52uf")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 809.0
offset_top = 10.0
offset_right = 1152.0
offset_bottom = 76.0
color = Color(0.74902, 0.701961, 0, 0.12549)

[node name="PlayerLife" type="Label" parent="CanvasLayer"]
offset_left = 1004.0
offset_top = 13.0
offset_right = 1140.0
offset_bottom = 63.0
text = "Vida: 10"
label_settings = SubResource("LabelSettings_hffn7")

[node name="EnemiesDefeated" type="Label" parent="CanvasLayer"]
offset_left = 829.0
offset_top = 15.0
offset_right = 990.0
offset_bottom = 65.0
text = "Puntos: 0"
label_settings = SubResource("LabelSettings_m6qry")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bawvl")
animation = &"attack"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
